logs/rtt.20260330-085103.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent1)
warning: unexpected `cfg` condition value: `all_chapters`
 --> tests/Chap65/TestUnionFindStEph.rs:1:8
  |
1 | #![cfg(feature = "all_chapters")]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `Chap02`, `Chap03`, `Chap05`, `Chap06`, `Chap11`, `Chap12`, `Chap17`, `Chap18`, `Chap19`, `Chap21`, `Chap23`, `Chap26`, `Chap27`, `Chap28`, `Chap30`, `Chap35`, `Chap36`, `Chap37`, `Chap38`, `Chap39`, `Chap40`, `Chap41`, `Chap42`, `Chap43`, `Chap44`, `Chap45`, `Chap47`, `Chap49`, `Chap50`, `Chap51`, `Chap52`, `Chap53`, `Chap54`, `Chap55`, and `Chap56` and 12 more
  = help: consider adding `all_chapters` as a feature in `Cargo.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: requested on the command line with `-W unexpected-cfgs`

warning: `apas-verus` (test "TestUnionFindStEph") generated 1 warning
error[E0369]: binary operation `==` cannot be applied to type `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>`
   --> tests/Chap57/TestStackStEph.rs:218:5
    |
218 |     assert_eq!(s1, s2);
    |     ^^^^^^^^^^^^^^^^^^
    |     |
    |     apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>
    |     apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>
    |
note: `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>` does not implement `PartialEq<apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>>`
   --> src/Chap57/StackStEph.rs:47:5
    |
 47 |     pub struct StackStEph<T: StT> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>` is defined in another crate
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: binary operation `==` cannot be applied to type `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>`
   --> tests/Chap57/TestStackStEph.rs:220:5
    |
220 |     assert_ne!(s1, s2);
    |     ^^^^^^^^^^^^^^^^^^
    |     |
    |     apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>
    |     apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>
    |
note: `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>` does not implement `PartialEq<apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>>`
   --> src/Chap57/StackStEph.rs:47:5
    |
 47 |     pub struct StackStEph<T: StT> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `apas_verus::Chap57::StackStEph::StackStEph::StackStEph<{integer}>` is defined in another crate
    = note: this error originates in the macro `assert_ne` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0369`.
error: could not compile `apas-verus` (test "TestStackStEph") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 1s
